# repurpose

./: .coveragerc  .gitattributes  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CHANGES.md  CHANGES.rst  LICENSE.txt  README.md  README.rst  environment.yml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: build.yml
docs/: Makefile  conf.py  env.yml  environment.yml  index.rst  resample.rst  rtd.yml  ts2img.rst
docs/examples/: ts2img.ipynb
docs/examples/assets/: SM_AUT.csv  warp_subgrid_AUT.nc
imgtsimg/: _version.py  img2ts.py  skeleton.py  ts2img.py
org-files/: ts2img.org
repurpose/: __init__.py  _version.py  img2ts.py  skeleton.py
src/repurpose/: concatenate.py  img2ts.py  misc.py  process.py  resample.py  stack.py  test.py  ts2img.py  utils.py
tests/: conftest.py  test_image.py  test_img2ts.py  test_misc.py  test_process.py  test_resample.py  test_ts2img.py  test_utils.py
tests/test_docs/: test_examples.py
