# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = repurpose
description = Package for image to timeseries to image conversion
author = TU Wien
author_email = remote.sensing@geo.tuwien.ac.at
license = mit
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://repurpose.readthedocs.io/en/latest/
project_urls =
    Documentation = https://repurpose.readthedocs.io/en/latest/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    importlib-metadata; python_version<"3.8"
    numpy
    pygeogrids>=0.1.3
    netCDF4
    pynetcf>=0.5.0
    pyresample
    tqdm
    more_itertools
    joblib
    cadati
    yapf
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install repurpose[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    smecv_grid
    pytest
    pytest-cov

docs =
    ipykernel
    matplotlib
    nbconvert
    matplotlib
    nbsphinx
    sphinx_rtd_theme

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = repurpose.module:function
# For example:
# console_scripts =
#     fibonacci = repurpose.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov repurpose --cov-report term-missing
    --verbose
    -m "not docs"
norecursedirs =
    dist
    build
    .tox
testpaths = tests
markers =
    docs: marks tests based on jupyter notebooks (deselected by default)

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.4
package = repurpose
extensions =
    no_skeleton


[yapf]
based_on_style = yapf
indent_width = 4
column_limit = 79
